--- a/answer.html
+++ b/answer.html
@@ -28,11 +28,11 @@
 <div class="carousel-track-container">
 <ul class="carousel-track">
 <li class="carousel-slide">
-<img alt="キー画像の説明" src="key-tra.jpeg"/>
+<img alt="キー画像の説明" src="Key-images/key-tra.jpeg"/>
 <p class="caption"></p>
 </li>
 <li class="carousel-slide">
-<img alt="キー画像２の説明" src="key-tra-sag.png"/>
+<img alt="キー画像２の説明" src="Key-images/key-tra-sag.png"/>
 <!--<p class="caption">キャプション加える場所</p>-->
 </li>
 </ul>
