--- a/answer.html
+++ b/answer.html
@@ -48,6 +48,16 @@
 <p>脊髄の辺縁が高吸収を呈しており出血が疑われる。</p>
 </div>
 </section>
+
+<section class="result-section">
+<h2>■ 解説</h2>
+<div class="explanation">
+<p>脳/頭蓋内だけでなく症状も併せて脊髄病変も疑い、脊柱
+管内にも注目すること！</p>
+<p>脊髄病変も考えられる時は横断像だけでなく、矢状断や
+冠状断でも確認！その後にMRIによる詳細は評価を行う。</p>
+</div>
+</section>
 <div class="back-button">
 <a href="https://anjokosei.jp">次へ</a>
 </div>
