--- a/answer.html
+++ b/answer.html
@@ -50,7 +50,7 @@
 </section>
 
 <section class="result-section">
-<h2>■ 解説</h2>
+<h2>■ take ER message</h2>
 <div class="explanation">
 <p>脳/頭蓋内だけでなく症状も併せて脊髄病変も疑い、脊柱
 管内にも注目すること！</p>
