--- a/patient.html
+++ b/patient.html
@@ -36,7 +36,7 @@
 <span class="label">検査内容</span>
 <span class="value">
         頭部CT・MRIで原因となる異常なし。<br/>
-        その後頸〜胸部CT
+        その後、頸〜胸部CT
 </span>
 </div>
 </div>
